<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:id="@+id/container" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="ltr">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/pickerWrapper" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/empty_start" android:tag="empty_start" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="4" custom:npv_DividerColor="#cccccc" custom:npv_ShownCount="5"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/year" android:tag="year" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/year_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/month" android:tag="month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/month_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/date" android:tag="date" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/date_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/day" android:tag="day" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/day_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/hour" android:tag="hour" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/hour_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/minutes" android:tag="minutes" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/minutes_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/ampm" android:tag="ampm" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" android:contentDescription="@string/ampm_description" custom:npv_DividerColor="#cccccc" custom:npv_RespondChangeOnDetached="false" custom:npv_ShownCount="5" custom:npv_TextColorNormal="#aaaaaa" custom:npv_TextColorSelected="#000000" custom:npv_TextSizeNormal="18dp" custom:npv_TextSizeSelected="21dp"/>
        <com.henninghall.date_picker.pickers.IosClone android:id="@+id/empty_end" android:tag="empty_end" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="4" custom:npv_DividerColor="#cccccc" custom:npv_ShownCount="5"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="-1dp">
        <ImageView android:id="@+id/overlay_top" android:layout_width="match_parent" android:layout_height="0dp" android:src="@drawable/overlay" android:layout_weight="0.15" android:contentDescription="@string/overlay" android:rotation="180" android:importantForAccessibility="no"/>
        <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.7"/>
        <ImageView android:id="@+id/overlay_bottom" android:layout_width="match_parent" android:layout_height="0dp" android:src="@drawable/overlay" android:layout_weight="0.15" android:importantForAccessibility="no"/>
    </LinearLayout>
</RelativeLayout>
